@@ -96,6 +96,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese translation; thanks to Zabbix
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+..F....... [ZBX-8021] fixed password changing for users with internal authentication (Eduard)
 ........S. [ZBX-8133] fixed possible deadlock while updating host_inventory table (Sasha)
 ..F....... [ZBX-8104] fixed inverted case sensitivity for regular expressions (Krists)
 ...G...... [ZBX-8117] fixed possible crash of agent under Windows after asking the "system.sw.arch" item (Sasha)
